# wavy

./: .coverage  .env.example  .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: lint.yml  python-conda-test.yml  python-test.yml  python.yml
LC-WVF/: cdmGribWriterConfig.xml  clean_locations.py  create_grib2.py  create_grib2_lt00.job  create_grib2_lt00.py  create_grib2_lt06.job  create_grib2_lt06.py  create_grib2_lt12.job  create_grib2_lt12.py  create_grib2_lt18.job  create_grib2_lt18.py  create_grib2_man.job  create_grib2_man.py  get_model_vals.py  get_valid_loc.py  locations_mwam4_clean.pkl  project_mwam4_grib2_10u.txt  project_mwam4_grib2_10v.txt  project_mwam4_grib2_mp2.txt  project_mwam4_grib2_mwd.txt  project_mwam4_grib2_swh.txt  project_mwam4_grib2_tp.txt  push_to_ec.py  push_to_ec_man.py  wind_height.ncml
apps/: download.py
apps/standalone/: check_sat.py  download.py  (+2 more)
arcmfc/: arcmfc3_collocate.py  arcmfc3_figures.py  arcmfc3_validate.py  arcmfc_collocate.py  arcmfc_collocate_BarentsSea.py  arcmfc_collocate_NordicSeas.py  arcmfc_collocate_specreg.py  arcmfc_figures.py  arcmfc_figures_NordicSeas.py  arcmfc_figures_specreg.py  arcmfc_ncfile.py  arcmfc_ncfile_NordicSeas.py  arcmfc_ncfile_adjust.py  arcmfc_ncfile_full_domain.py  arcmfc_ncfile_specreg1.py  arcmfc_ncfile_specreg2.py  arcmfc_validate.py  arcmfc_validate_BarentsSea.py  arcmfc_validate_NordicSeas.py  arcmfc_validate_specreg.py
config/: buoy_specs.yaml.default  collocation_specs.yaml  collocation_specs.yaml.default  d22_var_dicts.yaml  insitu_specs.yaml  model_specs.yaml  model_specs.yaml.default  pathfinder.yaml  quicklook_specs.yaml  quicklook_specs.yaml.default  region_specs.yaml  region_specs.yaml.default  satellite_cfg.yaml  satellite_specs.yaml  satellite_specs.yaml.default  station_specs.yaml  stationlist.yaml  variable_info.yaml  variable_info.yaml.default  variable_shortcuts.yaml  variables_frost.yaml
docs/: Makefile  conf.py  credits.rst  gallery.rst  index.rst  installation.rst  installing.rst  mozambique23.rst  mozambique24.rst  mozambique25.rst  oneocean.rst  requirements.txt  tanzania25.rst  tutorials.rst  tutorials_WEkEO.rst  tutorials_ais.rst  tutorials_collocmod.rst  tutorials_config.rst  tutorials_consolidate.rst  tutorials_filters.rst  tutorials_gridder.rst  tutorials_insitu.rst  tutorials_modelmod.rst  tutorials_multiins.rst  tutorials_multisat.rst  tutorials_quicklooks.rst  tutorials_regions.rst  tutorials_sat.rst  tutorials_sat_download.rst  tutorials_sat_filters.rst  tutorials_sat_import.rst  tutorials_sat_multi.rst  tutorials_sat_regions.rst  tutorials_satmod.rst  tutorials_stats.rst  tutorials_stormtrack.rst  tutorials_triple_collocation.rst  tutorials_validate.rst  tutorials_wavyQuick.rst  vietnam21.rst  (+6 more)
op/: collect_buoy.py  collect_model_at_location.py  collect_model_at_location_all.py  collect_model_at_location_all_bestguess.py  collect_model_at_location_all_cont.py  collect_model_at_location_bestguess.py  collect_model_at_location_cont.py  collect_station.py  collect_station_all.py  collocate_Erin.py  collocate_NansenLegacy_leadtimes.py  collocate_all_stations_arcmfc3.py  collocate_all_stations_arcmfc3_Tp.py  collocate_buoy.py  collocate_buoy_all_bestguess.py  collocate_buoy_arcmfc3.py  collocate_buoy_bestguess.py  collocate_cont.py  collocate_sat_altimeter_bestguess.py  collocate_station.py  collocate_station_all.py  collocate_station_all_bestguess.py  collocate_station_arcmfc3.py  collocate_station_arcmfc3_Tp.py  collocate_station_arcmfc3_Tp_onego.py  collocate_station_bestguess.py  make_model_vs_obs_ts.py  make_model_vs_sat_validation_ts.py  make_plotly_ts_figs.py  op_collect.py  op_collect_testall.py  op_collocate.py  op_collocate_bestguess.py  op_collocate_ww3.py  op_figures.py  op_validate.py  test_ncmod.py
tests/: conftest.py  test_aismod.py  test_collocmod.py  test_config.py  test_consolidate.py  test_filter.py  test_filter_module.py  test_filtermod.py  test_gridder.py  test_gridder_module.py  test_insitumod.py  test_modelmod.py  test_multiins.py  test_multisat.py  test_satellite_module.py  test_satmod.py  test_stationmod.py  test_triple_collocation.py  test_utils.py  test_validate_arcmfc.py
wavy/: GPfcts.py  __init__.py  aggregate.py  ais_module.py  arcmfc_collocate.py  arcmfc_figures.py  arcmfc_ncfile.py  arcmfc_validate.py  buoy_specs.py  buoy_specs.yaml  buoylist.py  check_S3a.py  check_sat.py  collectors.py  collocation_module.py  collocmod.py  collocmod.py.old  consolidate.py  consolidate_collocations.py  credentials.py  custom_nc.py  d22_var_dicts.py  d22_var_dicts.yaml  download.py  filter_module.py  filtermod.py  get_bestEstimate.py  graphicsmod.py  grid_readers.py  grid_stats.py  gridder.py  gridder_module.py  init_class.py  init_class_defaults.py  init_class_insitu.py  init_class_mod.py  init_class_sat.py  insitu_collectors.py  insitu_module.py  insitu_readers.py  (+48 more)
(+204 files in other folders)
