[tool.poetry]
name = "wavy"
version = "0.1.0"
description = "A package for processing wave measurements and wave model output."
authors = ["Patrik Bohlinger <patrikb@met.no>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
netCDF4 = "^1.5.7"
PyYAML = "^5.4.1"
pyproj = "^3.2.0"
Cartopy = "^0.19.0"
cmocean = "^2.0"
joblib = "^1.0.1"
scikit-learn = "^0.24.2"
pandas = "^1.3.3"
pygam = "^0.8.0"
scikit-sparse = "^0.4.6"
xarray = "^0.19.0"
zarr = "^2.9.5"
pyresample = "^1.21.0"
dask = "^2021.9.0"
tqdm = "^4.62.2"
python-dotenv = "^0.19.0"
sentinelsat = "^1.1.0"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
pylint = "^2.10.2"
yapf = "^0.31.0"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
