[tool.poetry]
name = "wavyopen"
version = "0.1.4"
description = "A package for processing wave measurements and wave model output."
authors = ["Patrik Bohlinger <patrikb@met.no>"]
packages = [
    {include = "wavy"}
]

[tool.poetry.scripts]
wavyQuick = "apps.standalone.wavyQuick:main"
wavyDownload = "apps.standalone.download:main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
netCDF4 = "^1.5.7"
PyYAML = "^5.4.1"
pyproj = ">=3.1"
Cartopy = ">=0.20"
cmocean = "^2.0"
joblib = "^1.0.1"
scikit-learn = "^0.24.2"
pandas = "^1.3.3"
pygam = "^0.8.0"
xarray = "^0.19.0"
zarr = "^2.9.5"
pyresample = "^1.21.0"
dask = "^2022.01.0"
tqdm = "^4.62.2"
python-dotenv = "^0.19.0"
sentinelsat = "^1.1.0"
xdg = "^5.1.1"
roaring-landmask = ">=0.5"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
pylint = "^2.10.2"
yapf = "^0.31.0"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--benchmark-disable"
testpaths = [
  "tests",
]
markers = [
  "need_credentials:need credentials to run"
]


[tool.pylint.master]
extension-pkg-whitelist="netCDF4,numpy,scipy,roaring_landmask"

[tool.pylint.messages_control]
disable = "all"
enable = "F,unreachable,duplicate-key,unnecessary-semicolon,global-variable-not-assigned,unused-variable,unused-wildcard-import,binary-op-exception,bad-format-string,anomalous-backslash-in-string,bad-open-mode,E0001,E0011,E0012,E0100,E0101,E0102,E0103,E0104,E0105,E0107,E0108,E0110,E0111,E0112,E0113,E0114,E0115,E0116,E0117,E0118,E0202,E0203,E0211,E0213,E0236,E0237,E0238,E0239,E0240,E0241,E0301,E0302,E0303,E0401,E0402,E0601,E0602,E0603,E0604,E0611,E0632,E0633,E0701,E0702,E0703,E0704,E0710,E0711,E0712,E1003,E1101,E1102,E1111,E1120,E1121,E1123,E1124,E1125,E1126,E1127,E1128,E1129,E1130,E1131,E1132,E1133,E1134,E1135,E1137,E1138,E1139,E1200,E1201,E1205,E1206,E1300,E1301,E1302,E1303,E1304,E1305,E1306,E1310,E1700,E1701"

